--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     --off-black: #080808;
     --border-off-black: #222222;
     --selection-yellow: rgba(255, 195, 0, 75%);
+    --selection-green: rgba(30, 255, 0, 0.75);
     --tomato-red: #c50000;
 
     --playing-grid-width: 500px;
@@ -124,6 +125,30 @@ body {
     text-align: center;
 
     cursor: pointer;
+}
+
+.current-move {
+    font-family: var(--preferred-font), sans-serif;
+    font-size: 0.95rem;
+    font-weight: 600;
+
+    position: absolute;
+    top: 85%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    border: 1px solid var(--off-black);
+    padding: 0.5rem;
+    transition: all 0.1s ease-in-out;
+}
+
+.current-move #move {
+    font-size: 0.75rem;
+    font-weight: 300;
+    margin-left: 2.5px;
+
+    position: relative;
+    bottom: 0.5px;
 }
 
 .playing-grid {
